--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Gift Box Container -->
-  <!-- <div id="gift-container" class="merrywrap">
-    <div class="giftbox">
-      <div class="cover">
-        <div></div>
-      </div>
-      <div class="box"></div>
-    </div>
-  </div> -->
-
-  <!-- Main Content (Initially Hidden) -->
+  <!-- Main Content -->
   <div id="main-content">
     <div class="video-container">
-      <video autoplay muted loop id="background-video">
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
+      <!-- Embedding YouTube video -->
+      <iframe
+        id="background-video"
+        src="https://youtu.be/Q8xD0JlHNnk?si=ZNL0p5NHif6IhNB6"
+        frameborder="0"
+        allow="autoplay; encrypted-media"
+        allowfullscreen
+      ></iframe>
     </div>
 
     <pointer-particles></pointer-particles>
