Updated script to use a new YouTube link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- Embedding YouTube video -->
       <iframe
         id="background-video"
-        src="https://youtu.be/Q8xD0JlHNnk?si=ZNL0p5NHif6IhNB6"
+        src="https://www.youtube.com/embed/Q8xD0JlHNnk?si=hWYHozQQXXlVL_pP"
         frameborder="0"
         allow="autoplay; encrypted-media"
         allowfullscreen
